<resources>
    <string name="app_name">sabi.xyz</string>
    <string name="localpath">http://172.20.10.3/sabi/</string>
    <!--<string name="localpath">http://sabi.xyz/</string>-->
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_payments">Payments</string>
    <string name="menu_search">Book Search</string>
    <string name="menu_my_books">My Books</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>

    <!--Shared Preference -->
    <string name="user_sharePreference_Key">sabi_user_pref_key</string>
    <string name="user_token">token</string>
    <string name="user_id">0</string>
    <string name="user_email">johndoe@test.com</string>
    <string name="user_phone">+23470000000</string>
    <string name="user_department">department</string>
    <string name="user_school">school</string>
    <string name="user_faculty">faculty</string>
    <string name="user_fname">First Name</string>
    <string name="user_lname">Last Name</string>
    <string name="first_name">John</string>
    <string name="last_name">Doe</string>
    <string name="full_name">John Doe</string>
    <string name="mybook_list"></string>
    <string name="cookie">Cookie</string>
    <string name="user_profile_image_url"></string>
    <string name="user_profile_image_base64_string"></string>


    <!--Signup -->
    <string name="signup_user_email">Email Address</string>
    <string name="signup_user_phone">Phone Number</string>
    <string name="signup_user_fname">First Name</string>
    <string name="signup_user_lname">Last Name</string>
    <string name="signup_school">School</string>
    <string name="signup_faculty">Faculty</string>
    <string name="signup_department">Department</string>
    <string name="signup_password">Password</string>
    <string name="signup_confirm_password">Confirm Password</string>
    <string name="signup_asterics">********</string>
    <string name="signup_confirm_code">Confirmation Code</string>
    <string name="not_match_password">Passwords Do Not Match! Please try again</string>
    <string name="privacy_policy_link"><u>I Agree to Sabi.XYZ Policy</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Payments -->
    <string name="currency">N</string>


    <string-array name="desserts">
        <item>Cupcake</item>
        <item>Donut</item>
        <item>Eclair</item>
        <item>Froyo</item>
        <item>Gingerbread</item>
        <item>Honeycomb</item>
        <item>Ice Cream Sandwich</item>
        <item>Jelly Bean</item>
        <item>Kit Kat</item>
        <item>Lollipop</item>
        <item>Marshmallow</item>
        <item>Nougat</item>
    </string-array>

</resources>



