<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/app_header_bg6"
    android:backgroundTintMode="screen"
    android:backgroundTint="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImage_nav_header_profile_image"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:contentDescription="@string/nav_header_desc"
            android:elevation="10dp"
            android:layout_gravity="center"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/default_user_icon"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textAlignment="center"
        android:id="@+id/tv_nav_user_name"
        android:fontFamily="@font/avenirnextltpro_regular"
        android:text="@string/nav_header_title"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tv_nav_user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_color"
        android:textSize="12dp"
        android:textAlignment="center"
        android:text="07083938333" />

    <TextView
        android:id="@+id/tv_nav_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_color"
        android:textSize="12dp"
        android:textAlignment="center"
        android:text="@string/nav_header_subtitle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingTop="20dp"
        android:gravity="right">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="right"
            android:src="@drawable/sabi_logo_white_sm"/>
    </LinearLayout>

</LinearLayout>


</LinearLayout>
