<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sabiOrange"
    android:padding="0dp"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="112dp"
        android:layout_height="95dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/sabi_logo_white" />
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/avenirnextltpro_regular"
        android:text="Hola"
        android:layout_below="@+id/logo"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:layout_below="@+id/logo"
        android:id="@+id/sub_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/avenirnextltpro_regular"
        android:textAlignment="center"
        android:text="Reading just got a lot better"
        android:textColor="#E4E2E2"
        android:textSize="13dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout
        android:id="@+id/linearlayout_user_signup"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/sub_header"
        android:layout_marginTop="15dp"
        android:paddingTop="10dp"
        android:visibility="visible"
        android:background="@drawable/white_rounded_top_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.22"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/signup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_bold_1"
            android:text="Confirm Email"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.127"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.041" />


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:id="@+id/linearlayout_user_confirm_form">

            <TextView
                android:id="@+id/tv_return_msg"
                android:layout_below="@+id/signup_title"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenirnextltpro_regular"
                android:textAlignment="center"
                android:paddingBottom="5dp"
                android:text="Error Message"
                android:drawableLeft="@drawable/ic_error_orange_24dp"
                android:textColor="@color/sabiOrange"
                android:textSize="15dp"
                android:textStyle="bold"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            style="@style/textView">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold_1"
                android:paddingTop="4dp"
                android:textColor="@color/black"
                android:text="@string/signup_user_email"/>

            <EditText
                android:layout_gravity="right"
                android:id="@+id/edt_confirm_user_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:hint="@string/user_email"
                android:layout_alignParentEnd="true"
                android:textColorHint="@color/sabiGrey"
                android:background="@color/transparent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            style="@style/textView">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold_1"
                android:paddingTop="8dp"
                android:textColor="@color/black"
                android:text="@string/signup_confirm_code"/>

            <EditText
                android:layout_gravity="right"
                android:id="@+id/edt_confirm_user_code"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_alignParentEnd="true"
                android:textColor="@color/black"
                android:textColorHint="@color/sabiGrey"
                android:background="@color/transparent"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_confirm_user_code_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_black_btn_no_border"
                android:textColor="@color/white"
                android:text="Submit"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/tv_already_have_account"
                android:layout_below="@+id/signup_title"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenirnextltpro_regular"
                android:textAlignment="center"
                android:text="Please resend confirmation code"
                android:layout_marginTop="30dp"
                android:textColor="@color/sabiOrange"
                android:textSize="15dp"
                android:clickable="true"
                android:textStyle="bold"
                />


        </LinearLayout>


        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayout_user_confirm_form_success">

        <TextView
            android:id="@+id/signup_success_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_bold_1"
            android:text="Bravo"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textSize="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.127"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.041" />

        <TextView
            android:id="@+id/tv_return_success_msg"
            android:layout_below="@+id/signup_title"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenirnextltpro_regular"
            android:textAlignment="center"
            android:paddingBottom="5dp"
            android:text="Success Message"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            />


        <Button
            android:id="@+id/btn_confirm_user_code_submit_successful"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_orange_btn_no_border"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:text="Proceed To Login"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAllCaps="false"/>

    </LinearLayout>


    </LinearLayout>
</RelativeLayout>